--- a/create-react-app/public/chattest.html
+++ b/create-react-app/public/chattest.html
@@ -50,21 +50,21 @@
 </body>
 
 <script>
-    converse.initialize({
-        authentication: 'anonymous',
-        auto_login: true,
-        auto_join_rooms: [
-            'anonymous@conference.chat.tumder.de',
-        ],
-        bosh_service_url: 'https://chat.tumder.de/bosh/', // Please use this connection manager only for testing purposes
-        jid: 'chat.tumder.de', // XMPP server which allows anonymous login (doesn't
-                          // allow chatting with other XMPP servers).
-        notify_all_room_messages: [
-            'anonymous@conference.chat.tumder.de',
-        ],
-        singleton: true,
-        // locales_url: "../locale/{{{locale}}}/LC_MESSAGES/converse.json",
-        view_mode: 'embedded',
-    });
+	converse.initialize({
+	        authentication: 'anonymous',
+	        auto_login: true,
+	        auto_join_rooms: [
+	            'anonymous@conference.nomnom.im',
+	        ],
+	        bosh_service_url: 'https://conversejs.org/http-bind/', // Please use this connection manager only for testing purposes
+	        jid: 'nomnom.im', // XMPP server which allows anonymous login (doesn't
+	                          // allow chatting with other XMPP servers).
+	        notify_all_room_messages: [
+	            'anonymous@conference.nomnom.im',
+	        ],
+	        singleton: true,
+	        locales_url: "../locale/{{{locale}}}/LC_MESSAGES/converse.json",
+	        view_mode: 'embedded',
+	    });
 </script>
 </html>
